<resources>
    <string name="app_name">FastMart</string>
    <string name="app_slogan">The Smarter Way to Shop Fast</string>
    <string name="header_content">Welcome</string>
    <string name="dod_heading">Deal of the Day</string>
    <string name="recommended_section_heading">Recommended for you</string>
    <string name="dod_img_description">Item Image</string>
    <string name="buy_button">Buy Now</string>
    <string name="buy_message">Wow! Nice Choice</string>
    <string name="cancel_button">Cancel</string>
    <string name="onBoard_screen_img_description">On Board Image</string>
    <string name="onBoard_screen_title">Welcome to Fast Mart</string>
    <string name="onBoard_screen_slogan">Shop Fast with Fast</string>
    <string name="onBoard_button_text">Get Started -></string>
    <string name="login_signup_page_title">Get Started Now</string>
    <string name="login_signup_page_message">Create an account or login to explore about this app</string>
    <string name="email_hint">Email Address</string>
    <string name="name_hint">Full Name</string>
    <string name="gender_hint">Gender</string>
    <string name="phNo_hint">Phone Number</string>
    <string name="dob_hint">Date of Birth</string>
    <string name="password_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="verifyPassword_hint">Verify Password</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="image_description">Item Image</string>
    <string name="home_nav">Home</string>
    <string name="browse_nav">Browse</string>
    <string name="favorite_nav">Favorites</string>
    <string name="cart_nav">Cart</string>
    <string name="profile_nav">Profile</string>
    <string name="favorite_img">isFavorite</string>
    <string name="more_icon_desc">More</string>
    <string name="inc_icon_desc">Increment</string>
    <string name="dec_icon_desc">Decrement</string>
    <string name="checkout_btn_text">Checkout</string>
    <string name="shipping_heading">Shipping</string>
    <string name="total_heading">Total</string>
    <string name="logout_btn_text">Logout</string>
    <string name="search_frag_heading">Search</string>
    <string name="recent_searches_heading">Recent Searches</string>
    <string name="clear_all">Clear All</string>
    <string name="back_arrow_desc">Back Arrow</string>
</resources>