<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".OnBoardScreen">
    <ImageView
        android:id="@+id/onBoardImage"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:src="@drawable/onboard"
        android:contentDescription="@string/onBoard_screen_img_description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/onBoardTitle"
        app:layout_constraintVertical_chainStyle="packed"
        />
    <TextView
        android:id="@+id/onBoardTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onBoard_screen_title"
        android:textStyle="bold"
        android:textSize="30sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/onBoardImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/onBoardSlogan"
        />
    <TextView
        android:id="@+id/onBoardSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onBoard_screen_slogan"
        android:textSize="15sp"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/onBoardTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/onBoardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/onBoard_button_text"
        app:cornerRadius="10dp"
        android:layout_marginHorizontal="10dp"
        android:backgroundTint="?button_bg_color"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>