<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    tools:context=".BrowseFragment">
    <TextView
        android:id="@+id/browse_heading_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/search_frag_heading"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="20dp"
        android:layout_alignParentStart="true"
        />
    <androidx.appcompat.widget.SearchView
        android:id="@+id/search_search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/browse_heading_section"
        />

    <LinearLayout
        android:id="@+id/recent_heading_section"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/search_search_bar"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/recent_searches_heading"
            android:textStyle="bold"
            android:textSize="20sp"
            />
        <TextView
            android:id="@+id/clear_all_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="11sp"
            android:text="@string/clear_all"
            android:textColor="@color/blue"
            android:textIsSelectable="true"
            />
    </LinearLayout>
    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/recent_heading_section"
        />
</RelativeLayout>