<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:id="@+id/cart_img_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardElevation="0dp"
        app:cardCornerRadius="30dp"
        app:cardUseCompatPadding="true"
        app:contentPadding="20dp"
        android:layout_gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/cart_pricing_section"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        >
        <ImageView
            android:id="@+id/cart_item_img"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="@string/image_description"
            android:layout_gravity="center"
            />
    </androidx.cardview.widget.CardView>
    <LinearLayout
        android:id="@+id/cart_pricing_section"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toEndOf="@id/cart_img_section"
        app:layout_constraintEnd_toStartOf="@id/cart_button_section"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_weight="0.4"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/cart_original_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:textStyle="bold"
                android:fontFamily="sans-serif-black"
                android:textSize="15sp"
                android:layout_marginEnd="3dp"
                />
            <TextView
                android:id="@+id/cart_discounted_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:fontFamily="sans-serif"
                android:textSize="11sp"
                android:visibility="gone"
                />
        </LinearLayout>
        <TextView
            android:id="@+id/cart_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:fontFamily="sans-serif"
            android:textSize="11sp"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:id="@+id/cart_item_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:fontFamily="sans-serif"
                android:textSize="11sp"
                />
            <TextView
                android:id="@+id/cart_item_color"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:fontFamily="sans-serif"
                android:textSize="11sp"
                android:layout_marginStart="10dp"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/cart_button_section"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@id/cart_pricing_section"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <ImageButton
            android:id="@+id/cart_more"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/more"
            android:contentDescription="@string/more_icon_desc"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >
            <ImageButton
                android:id="@+id/cart_dec"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/dec"
                android:contentDescription="@string/dec_icon_desc"
                />
            <TextView
                android:id="@+id/cart_item_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <ImageButton
                android:id="@+id/cart_inc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/add"
                android:contentDescription="@string/inc_icon_desc"
                />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>